fix vuetify modal (shows when page updated)

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -13,6 +13,9 @@
       margin-right: 0px !important;
     }
   }
+  .text-left {
+    text-align: right !important;
+  }
 }
 .v-main .contents {
   color: mc('grey', '800');
