feat: add overlay to content images via renderer

--- a/client/themes/tyclipso/scss/app.scss
+++ b/client/themes/tyclipso/scss/app.scss
@@ -1,6 +1,9 @@
 /* THEME SPECIFIC STYLES */
 
 @import "../../default/scss/app";
+@import "settings";
+@import "mixins";
+@import "components";
 
 .ty-max-width {
   margin-left: auto !important;
@@ -178,26 +181,4 @@
       text-shadow: none !important;
     }
   }
-
-  // ---------------------------------
-  // IMAGES
-  // ---------------------------------
-
-  p {
-    > img:first-child,
-    > br + img {
-      display: block;
-      overflow: hidden;
-      margin: 12px 0;
-      border-radius: 4px;
-      box-shadow: 0 7px 8px -4px rgba(0,0,0,.2),0 12px 17px 2px rgba(0,0,0,.14),0 5px 22px 4px rgba(0,0,0,.12) !important;
-      transition: transform .2s ease;
-      cursor: pointer;
-
-      &:hover {
-        transform: scale(1.05);
-      }
-    }
-  }
-
 }
