Header formatting for Details Summary
Cleaning up Headers within Details Summary

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -814,6 +814,14 @@
         outline: none;
         background-color: mc('grey', '100');
       }
+      
+      > h1, h2, h3, h4, h5, h6 {
+        margin-top: 0;
+        
+        &::after {
+          background: none !important;
+        }
+      }
     }
 
     &[open] {
