--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -817,6 +817,7 @@
       
       > h1, h2, h3, h4, h5, h6 {
         margin-top: 0;
+        width: 100%;
         
         &::after {
           background: none !important;
