display: none for the keyline seems smarter

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -820,7 +820,7 @@
         width: 100%;
         
         &::after {
-          background: none !important;
+          display: none;
         }
       }
     }
