Fixes to accommodate large summaries
Fixed to accommodate larger summaries containing both headers and phrasing text. Still removing keylines for summaries with ONLY a header.

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -816,10 +816,14 @@
       }
       
       > h1, h2, h3, h4, h5, h6 {
-        margin-top: 0;
-        width: 100%;
+        width: 95%;
+        display: inline-block;
         
-        &::after {
+        &:first-child {
+          margin-top: 0;
+        }
+        
+        &:only-child::after {
           display: none;
         }
       }
