--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -77,6 +77,10 @@
     & + h2, & + h3, & + h4, & + h5, & + h6 {
       margin-top: 8px;
     }
+    
+    & + hr.footnotes-sep {
+      display: none;
+    }
   }
 
   h1 {
