fix: display of Headers within Details Summary (#4491)
* Header formatting for Details Summary

Cleaning up Headers within Details Summary

* Fix for TOC Anchor location

Fix for TOC Anchor location within Details Summary

* display: none for the keyline seems smarter

* Fixes to accommodate large summaries

Fixed to accommodate larger summaries containing both headers and phrasing text. Still removing keylines for summaries with ONLY a header.

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -813,6 +813,19 @@
         outline: none;
         background-color: mc('grey', '100');
       }
+      
+      > h1, h2, h3, h4, h5, h6 {
+        width: 95%;
+        display: inline-block;
+        
+        &:first-child {
+          margin-top: 0;
+        }
+        
+        &:only-child::after {
+          display: none;
+        }
+      }
     }
 
     &[open] {
