fix: increase specificity of content ul selector

--- a/client/themes/tyclipso/scss/app.scss
+++ b/client/themes/tyclipso/scss/app.scss
@@ -71,7 +71,7 @@
     font-weight: 500;
   }
 
-  ul:not(.tabset-tabs) {
+  ul:not(.tabset-tabs):not(.contains-task-list) {
     list-style: disc;
 
     ul {
