--- a/server/views/editor.pug
+++ b/server/views/editor.pug
@@ -19,6 +19,7 @@ block body
       script-css=page.extra.css
       script-js=page.extra.js
       init-mode=page.mode
+      :min-toc-level=page.minTocLevel
       :toc-level=page.tocLevel
       :toc-collapse-level=page.tocCollapseLevel
       init-editor=page.editorKey
