Add Use Site Default Switch
Use Site Default Switch now changes between usage of page specific toc levels and site specific toc levels per site.
Removed Global selection from range slider of toc level therefor

--- a/server/views/editor.pug
+++ b/server/views/editor.pug
@@ -22,6 +22,7 @@ block body
       :min-toc-level=page.minTocLevel
       :toc-level=page.tocLevel
       :toc-collapse-level=page.tocCollapseLevel
+      :do-use-toc-default=page.doUseTocDefault.toString()
       init-editor=page.editorKey
       init-content=page.content
       checkout-date=page.updatedAt
