feat: Configurable ToC Heading Levels (#5101)
Co-authored-by: Regev Brody <regevbr@gmail.com>

--- a/server/views/editor.pug
+++ b/server/views/editor.pug
@@ -19,6 +19,10 @@ block body
       script-css=page.extra.css
       script-js=page.extra.js
       init-mode=page.mode
+      :min-toc-level=page.minTocLevel
+      :toc-level=page.tocLevel
+      :toc-collapse-level=page.tocCollapseLevel
+      :do-use-toc-default=page.doUseTocDefault.toString()
       init-editor=page.editorKey
       init-content=page.content
       checkout-date=page.updatedAt
