--- a/server/views/page.pug
+++ b/server/views/page.pug
@@ -29,6 +29,10 @@ block body
       comments-enabled=config.features.featurePageComments
       effective-permissions=Buffer.from(JSON.stringify(effectivePermissions)).toString('base64')
       comments-external=comments.codeTemplate
+      :min-toc-level=minTocLevel
+      :toc-level=tocLevel
+      :toc-collapse-level=tocCollapseLevel
+      :do-use-toc-default=doUseTocDefault.toString()
       )
       template(slot='contents')
         div!= page.render
