fix: db connection

--- a/ux/src/css/app.scss
+++ b/ux/src/css/app.scss
@@ -98,6 +98,10 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
+.q-select__dropdown-icon {
+  font-size: 16px;
+}
+
 // ------------------------------------------------------------------
 // BUTTONS
 // ------------------------------------------------------------------
