--- a/ux/src/css/app.scss
+++ b/ux/src/css/app.scss
@@ -98,6 +98,17 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
+// ------------------------------------------------------------------
+// ICONS SIZE FIX
+// ------------------------------------------------------------------
+
+.q-btn .q-icon {
+  &.fa-solid,
+  &.fa-regular {
+    font-size: 1.3em;
+  }
+}
+
 .q-select__dropdown-icon {
   font-size: 16px;
 }
