update as per TP comment

--- a/server/templates/account-reset-pwd.html
+++ b/server/templates/account-reset-pwd.html
@@ -287,7 +287,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td style="padding: 0px 20px 0px 20px; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                                <td style="padding: 0px 20px 0px 20px; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;font-weight: bold;">
                                     <p style="margin: 0px 0px 0px 0px;">
                                         <%= footertext %>
                                     </p>
