--- a/server/views/editor.pug
+++ b/server/views/editor.pug
@@ -19,10 +19,7 @@ block body
       script-css=page.extra.css
       script-js=page.extra.js
       init-mode=page.mode
-      :min-toc-level=page.minTocLevel
-      :toc-level=page.tocLevel
-      :toc-collapse-level=page.tocCollapseLevel
-      :do-use-toc-default=page.doUseTocDefault.toString()
+      toc-options=Buffer.from(JSON.stringify(page.tocOptions)).toString('base64')
       init-editor=page.editorKey
       init-content=page.content
       checkout-date=page.updatedAt
