--- a/dev/templates/base.pug
+++ b/dev/templates/base.pug
@@ -29,6 +29,7 @@ html(lang=siteConfig.lang)
 
     //- Site Properties
     script.
+      var siteId = "!{siteId}"
       var siteConfig = !{JSON.stringify(siteConfig)}
       var siteLangs = !{JSON.stringify(langs)}
 
