--- a/server/views/base.pug
+++ b/server/views/base.pug
@@ -1,5 +1,5 @@
 doctype html
-html
+html(lang=siteConfig.lang)
   head
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(charset='UTF-8')
@@ -21,11 +21,22 @@ html
 
     //- Favicon
     link(rel='apple-touch-icon', sizes='180x180', href='/_assets/favicons/apple-touch-icon.png')
-    link(rel='icon', type='image/png', sizes='192x192', href='/_assets/favicons/android-icon-192x192.png')
+    link(rel='icon', type='image/png', sizes='192x192', href='/_assets/favicons/android-chrome-192x192.png')
     link(rel='icon', type='image/png', sizes='32x32', href='/_assets/favicons/favicon-32x32.png')
     link(rel='icon', type='image/png', sizes='16x16', href='/_assets/favicons/favicon-16x16.png')
     link(rel='mask-icon', href='/_assets/favicons/safari-pinned-tab.svg', color='#1976d2')
     link(rel='manifest', href='/_assets/manifest.json')
+
+    //- Site Properties
+    script.
+      var siteId = "!{siteId}"
+      var siteConfig = !{JSON.stringify(siteConfig)}
+      var siteLangs = !{JSON.stringify(langs)}
+
+    //- Dev Mode Warning
+    if devMode
+      script.
+        siteConfig.devMode = true
 
     //- Icon Set
     if config.theming.iconset === 'fa'
@@ -42,26 +53,24 @@ html
         )
 
     //- CSS
-    <% for (var index in htmlWebpackPlugin.files.css) { %>
-    link(
-      type='text/css'
-      rel='stylesheet'
-      href='<%= htmlWebpackPlugin.files.css[index] %>'
-    )
-    <% } %>
-
-    script(
-      crossorigin='anonymous'
-      src='https://polyfill.io/v3/polyfill.min.js?features=EventSource'
-    )
+    
 
     //- JS
-    <% for (var index in htmlWebpackPlugin.files.js) { %>
+    
+      
     script(
       type='text/javascript'
-      src='<%= htmlWebpackPlugin.files.js[index] %>'
+      src='/_assets-legacy/js/runtime.js'
       )
-    <% } %>
+      
+    
+      
+    script(
+      type='text/javascript'
+      src='/_assets-legacy/js/app.js'
+      )
+      
+    
 
     != analyticsCode.head
 
