--- a/ux/src/css/app.scss
+++ b/ux/src/css/app.scss
@@ -33,7 +33,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .font-poppins {
-  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: $font-poppins;
 }
 
 @font-face {
@@ -117,7 +117,7 @@ body::-webkit-scrollbar-thumb {
 // BUTTONS
 // ------------------------------------------------------------------
 
-body.desktop .acrylic-btn {
+#app .acrylic-btn {
   .q-focus-helper {
     background-color: currentColor;
     opacity: .1;
