--- a/ux/src/css/quasar.variables.scss
+++ b/ux/src/css/quasar.variables.scss
@@ -30,3 +30,7 @@ $dark-6: #070a0d;
 $dark-5: #0d1117;
 $dark-4: #161b22;
 $dark-3: #1e232a;
+
+// -- FONTS --
+
+$font-poppins: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
