fix: admin storage page display issues

--- a/ux/src/css/app.scss
+++ b/ux/src/css/app.scss
@@ -214,6 +214,8 @@ body::-webkit-scrollbar-thumb {
 
 @import './animation.scss';
 
+@import 'v-network-graph/lib/style.css'
+
 // @import '~codemirror/lib/codemirror.css';
 // @import '~codemirror/theme/elegant.css';
 // @import '~codemirror/theme/material-ocean.css';
