feat: error pages + update docs links in admin pages

--- a/ux/src/css/app.scss
+++ b/ux/src/css/app.scss
@@ -58,6 +58,8 @@ body::-webkit-scrollbar-thumb {
 .bg-dark-5 { background-color: #0d1117; }
 .bg-dark-4 { background-color: #161b22; }
 .bg-dark-3 { background-color: #1e232a; }
+.bg-dark-2 { background-color: #292f39; }
+.bg-dark-1 { background-color: #343b48; }
 
 // ------------------------------------------------------------------
 // FORMS
