feat: site logo upload + extensions fix

--- a/server/views/base.pug
+++ b/server/views/base.pug
@@ -54,20 +54,28 @@ html(lang=siteConfig.lang)
 
     //- CSS
     
+      
+    link(
+      type='text/css'
+      rel='stylesheet'
+      href='/_assets-legacy/css/app.629ebe3c082227dbee31.css'
+    )
+      
+    
 
     //- JS
     
       
     script(
       type='text/javascript'
-      src='/_assets-legacy/js/runtime.js'
+      src='/_assets-legacy/js/runtime.js?1662846772'
       )
       
     
       
     script(
       type='text/javascript'
-      src='/_assets-legacy/js/app.js'
+      src='/_assets-legacy/js/app.js?1662846772'
       )
       
     
