feat: page edit + setup instructions

--- a/server/views/base.pug
+++ b/server/views/base.pug
@@ -40,28 +40,20 @@ html(lang=siteConfig.lang)
 
     //- CSS
     
-      
-    link(
-      type='text/css'
-      rel='stylesheet'
-      href='/_assets-legacy/css/app.629ebe3c082227dbee31.css'
-    )
-      
-    
 
     //- JS
     
       
     script(
       type='text/javascript'
-      src='/_assets-legacy/js/runtime.js?1664769154'
+      src='/_assets-legacy/js/runtime.js'
       )
       
     
       
     script(
       type='text/javascript'
-      src='/_assets-legacy/js/app.js?1664769154'
+      src='/_assets-legacy/js/app.js'
       )
       
     
