--- a/server/views/editor.pug
+++ b/server/views/editor.pug
@@ -7,7 +7,7 @@ block head
 block body
   #root
     editor(
-      :page-id=page.id
+      page-id=page.id
       locale=page.localeCode
       path=page.path
       title=page.title
